# rs-scrape

./: Cargo.toml
public/: basic-card.css  index.html  script.js  style.css
public/components/: basic-card.js
src/: main.rs
src/get_metadata/: mod.rs
