[package]
name = "scraper"
version = "0.1.0"
authors = ["brecert <11599528+Brecert@users.noreply.github.com>"]
edition = "2018"

[features]
unstable = ["hyper/nightly"]

[dependencies]
select = "0.4.2"
reqwest = "0.9.18"
scraper = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
nickel = "0.11.0"

[dependencies.hyper]
version = "0.10"
default-features = false